<resources>
    <string name="buy">Buy</string>
    <string name="back">Back</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="dont_have_account_create_one">Don\'t have an account? Create one</string>
    <string name="unable_log_in">Sorry, unable to log in</string>
    <string name="unable_buy">Sorry, unable to buy</string>
    <string name="press_back_again">Press BACK again to quit</string>
    <string name="return_app">Return to app</string>
    <string name="congrats_for_buy">Congratulations for your buy!</string>
    <string name="buying">Buying...</string>

</resources>
