<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true"
    android:backgroundTint="?attr/colorPrimaryDark"
    tools:context=".view.ui.LogInActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="50dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/LogInEditText"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/LogInEditText"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/vLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/button_fill"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:clickable="true"
            app:textAllCaps="true"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/vRecoverPassword"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            style="@style/LogInTextView"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/vRegister"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/dont_have_account_create_one"
        style="@style/LogInTextView"/>

</android.support.design.widget.CoordinatorLayout>